--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,38 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    tools:context=".Register"
     android:orientation="vertical"
-    tools:context=".Login"
+    android:background="@color/white"
     android:padding="20dp">
 
     <ImageView
-        android:id="@+id/logo"
+        android:id="@+id/logotext"
         android:layout_width="match_parent"
         android:layout_height="108dp"
         android:src="@drawable/homepagenobg"
         android:transitionName="logotop"
-       />
+        />
 
     <TextView
-        android:id="@+id/logotext"
+        android:id="@+id/two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/dancing_script_bold"
-        android:text="Your Recipes Are Waiting"
+        android:text="Welcome To Recify"
         android:textAlignment="center"
         android:textColor="#35455D"
         android:textSize="40sp"
-        android:transitionName="logobottom" />
+        android:transitionName="logobottom"/>
 
     <TextView
-        android:id="@+id/tagline"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-light"
-        android:text="Sign in below!"
+        android:text="Sign Up below!"
         android:textAlignment="center"
         android:textColor="#35455D"
         android:textSize="18sp"
@@ -43,96 +42,113 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="410dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Your Name"
+            android:fontFamily="serif">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:inputType="text">
+            </com.google.android.material.textfield.TextInputEditText>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/user"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="Username"
+            app:counterEnabled="true"
+            app:counterMaxLength="12"
             android:transitionName="user">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="serif"></com.google.android.material.textfield.TextInputEditText>
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:inputType="text"
+                android:fontFamily="serif">
+            </com.google.android.material.textfield.TextInputEditText>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="Email">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:inputType="textEmailAddress"
+                android:fontFamily="serif">
+            </com.google.android.material.textfield.TextInputEditText>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="Password"
             app:passwordToggleEnabled="true"
             android:transitionName="pass">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="serif"
-                android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:inputType="textPassword"
+                android:fontFamily="serif">
+            </com.google.android.material.textfield.TextInputEditText>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="#00000000"
-            android:fontFamily="sans-serif-black"
-            android:text="Forgot Password?"
-            android:textColor="#35455D"></Button>
-
-        <Button
-            android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="25dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/custom_button"
             android:fontFamily="sans-serif-medium"
             android:text="SUBMIT"
             android:textColor="@color/white"
+            app:backgroundTint="#35455D"
             android:transitionName="submit"
-            app:backgroundTint="#35455D"></Button>
+            ></Button>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/custom_button"
-            android:fontFamily="sans-serif-medium"
-            android:text="GOOGLE SIGN-IN"
-            android:textColor="@color/white"
-            app:backgroundTint="#35455D"
-            android:layout_marginTop="10dp"></Button>
-
-        <Button
-            android:id="@+id/registerButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_margin="5dp"
             android:background="#00000000"
             android:fontFamily="sans-serif-black"
-            android:text="Sign-Up Here"
-            android:textColor="#35455D"
+            android:text="Login Here"
+            android:textColor="#35455d"
             android:transitionName="bottomtext"></Button>
 
+
+
     </LinearLayout>
-
-
 
 
 </LinearLayout>
