--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,6 +101,7 @@
             android:layout_marginBottom="5dp"
             android:background="@drawable/custom_button"
             android:fontFamily="sans-serif-medium"
+            android:onClick="login"
             android:text="SUBMIT"
             android:textColor="@color/white"
             android:transitionName="submit"
