--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -311,6 +311,7 @@
         android:layout_marginBottom="5dp"
         android:background="#00000000"
         android:fontFamily="sans-serif-black"
+        android:onClick="logout"
         android:text="Logout"
         android:textColor="#35455d"></Button>
 
