--- a/app/src/main/res/layout/activity_nearby_spots.xml
+++ b/app/src/main/res/layout/activity_nearby_spots.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".NearbySpots">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nearby Spots"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="366dp" />
+    <fragment
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"></fragment>
 </androidx.constraintlayout.widget.ConstraintLayout>
