--- a/app/src/main/res/layout/activity_nearby_spots.xml
+++ b/app/src/main/res/layout/activity_nearby_spots.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NearbySpots">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <fragment
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
@@ -15,4 +17,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"></fragment>
+
+    <RelativeLayout
+        android:id="@+id/iconRelativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/restarauntsIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="90dp"
+            android:backgroundTint="#00ffffff"
+            android:src="@drawable/restaurant" />
+
+        <ImageButton
+            android:id="@+id/groceryIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="205dp"
+            android:backgroundTint="#00ffffff"
+            android:src="@drawable/grocery" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
