--- a/app/src/main/res/layout-land/activity_dashboard.xml
+++ b/app/src/main/res/layout-land/activity_dashboard.xml
@@ -204,7 +204,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recify Recipes"
+                    android:text="Food Guesser"
                     android:fontFamily="@font/dancing_script"
                     android:textSize="28sp"
                     android:layout_below="@+id/icon4"
