--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -201,7 +201,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recify Recipes"
+                    android:text="Food Guesser"
                     android:fontFamily="@font/dancing_script"
                     android:textSize="28dp"
                     android:layout_below="@+id/icon4"
