--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     tools:context=".Dashboard"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="-20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -53,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:layout_marginTop="-120dp">
+        android:layout_marginTop="-140dp">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="0dp"
@@ -307,7 +308,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="-10dp"
         android:layout_marginBottom="5dp"
         android:background="#00000000"
         android:fontFamily="sans-serif-black"
