--- a/app/src/main/res/layout/activity_my_recipes.xml
+++ b/app/src/main/res/layout/activity_my_recipes.xml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyRecipes">
+    tools:context=".MyRecipes"
+    app:cardElevation="3dp"
+    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    app:cardBackgroundColor="@color/white"
+    app:contentPadding="3dp"
+    app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="151dp"
-        android:layout_marginBottom="373dp"
-        android:text="my recipes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--relative layout for card-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+<!--        circle image-->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/foodImageCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="250dp"
+            app:cardBackgroundColor="@color/white"
+            android:layout_margin="2dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="250dp"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/foodImage"
+                    android:layout_width="60dp"
+                    android:layout_height="59dp"
+                    android:src="@drawable/person"
+                    android:layout_gravity="center"/>
+            </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+<!--    space between image and details button-->
+        <LinearLayout
+            android:layout_centerVertical="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/foodImageCard"
+            android:layout_toRightOf="@+id/foodImageCard"
+            android:layout_toStartOf="@id/detailsButton"
+            android:orientation="vertical">
+<!--            recipe name-->
+            <TextView
+                android:id="@+id/recipeName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Recipe"
+                android:textColor="@color/black"
+                android:fontFamily="serif"/>
+
+            <TextView
+                android:id="@+id/recipeTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Time"
+                android:textColor="@color/black"
+                android:fontFamily="serif"/>
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/detailsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/details"
+            android:background="@null"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+
+
+</com.google.android.material.card.MaterialCardView>
