sqlite delete by id and delete all added, sqlite complete

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,4 +8,9 @@
         android:icon="@android:drawable/ic_menu_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
+    <item android:id="@+id/deleteAllIcon"
+        android:title="Delete All Recipes"
+        android:icon="@drawable/delete"
+        app:showAsAction="always"/>
+
 </menu>
