--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/forgotPass"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
